# management-sensors

./: .clang-format  .cursorrules  .editor-config  .gitignore  CMakeLists.txt  PIPE  README.md  gdb.sh  interactive_console_output.xml  logfile  test.sh
.cursor/rules/: cpp-systems-standards.mdc  frontend-nextjs-typescript.mdc  private-ui-components.mdc  sql-scripts-robot.mdc
broker/: CMakeLists.txt
broker/scripts/: mosquito.sh
broker/src/: main.cpp
broker/src/db/: DatabaseManager.cpp  DatabaseManager.hpp
caps/: pqc.pcap
certs/: ca.pem  server.key  server.pem  server.req
cli/: SensorCommandCli.cpp  SensorCommandCli.hpp
common/db/: DatabaseManager.hpp  IDatabaseConnection.hpp
common/json/: JsonUtils.hpp
common/jwt/: JwtManager.hpp
common/log/: Log.hpp
controller/: CMakeLists.txt  logfile
controller/scripts/: mosquito.sh
controller/src/: main.cpp
controller/src/db/: DatabaseManager.cpp  DatabaseManager.hpp
database/: README.md
database/sql/: db.sql  db_o.sql
frontend/: README.md  next.config.ts  package.json  pnpm-lock.yaml  tsconfig.json
frontend/auth-seed/: AuthLayout.tsx  AuthLoginForm.tsx  AuthPageTemplate.tsx  README.md
frontend/scripts/: setup-components.sh
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/(auth)/: layout.tsx  page.tsx
frontend/src/app/(dashboard)/: layout.tsx
frontend/src/app/(dashboard)/configuration/: page.tsx
frontend/src/app/(dashboard)/errors/: page.tsx
frontend/src/app/(dashboard)/sensors/: page.tsx
frontend/src/app/(dashboard)/telemetry/: page.tsx
include/testserver/: DatabaseManager.hpp  ocsp_cache.hpp
libs/db/: CMakeLists.txt  DatabaseManager.cpp
libs/json/: CMakeLists.txt  JsonUtils.cpp
libs/jwt/: CMakeLists.txt  JwtManager.cpp
policies/: client_policies.txt  pqc_basic.txt
proxy/: CMakeLists.txt
proxy/certs/: ca.key  server.key  server.req
proxy/scripts/: proxy.sh
proxy/src/: main.cpp
robot/output/: log.html  output.xml  report.html
scripts/: cli.sh  controller.sh  database.sh  gen_certs.sh  https.sh  kill.sh  logfile  loop.sh  proxy.sh  robot.sh  run.sh  sensors.sh  server.sh  simulate.sh  tests.sh
security/: README.md
sensor/: CMakeLists.txt
sensor/src/: main.cpp
server/: CMakeLists.txt  README.md  logfile
server/certs/: ca.key  client.key  client.req  jwt.key  jwt.req  server.key  server.req
server/include/testserver/: JsonUtils.hpp
server/patch/: libpqxx.patch
server/policies/: client_policies.txt  pqc_all.txt  pqc_basic.txt
server/scripts/: cli.sh  cli_load_test.sh  cli_test.sh  logfile  simulate.sh  test.sh
server/sql/: table.sql
server/src/: main.cpp
server/src/cli/: QuantumCommandCli.cpp  QuantumCommandCli.hpp  SensorCommandCli.cpp  SensorCommandCli.hpp
server/src/db/: DatabaseManager.cpp  DatabaseManager.hpp
server/src/dispatcher/: Dispatcher.cpp  Dispatcher.hpp
server/src/http/: QuantumSafeHttp.cpp  QuantumSafeHttp.hpp
server/src/json/: JsonUtils.cpp  JsonUtils.hpp
server/src/net/: IConnDetailsProvider.hpp  IQuantumConnDetailsProvider.hpp  ISessionHandler.hpp  QuantumSafeHttpServer.cpp  QuantumSafeHttpServer.hpp  QuantumSafeTlsEngine.cpp  QuantumSafeTlsEngine.hpp
server/src/oscp/: ocsp_cache.cpp
sql/: table.sql  trigger.sql
src/: main.cpp  ocsp_cache.cpp  ocsp_cache.h
src/db/: DatabaseManager.cpp
src/json/: JsonUtils.cpp
src/oscp/: ocsp_cache.cpp
test/dispatcher/: CMakeLists.txt
test/dispatcher/src/: main.cpp
tests/: CMakeLists.txt
tests/gtests/: CMakeLists.txt
tests/gtests/src/: main.cpp
tests/gtests/src/db/: DatabaseManagerTest.cpp  MockDatabaseTest.cpp
tests/gtests/src/dispatcher/: DispatcherTest.cpp
tests/gtests/src/json/: JsonUtilsTest.cpp
tests/gtests/src/jwt/: JwtManagerTest.cpp
tests/robot/output/: log.html  output.xml  report.html
tests/robot/resources/: common.resource
tests/robot/tests/: 00_management.robot  01_config.robot  01_https_api.robot  02_load.robot  __init__.robot  management.robot  pipeline_db.robot  pipeline_integration.robot  test.robot
tests/scripts/: botan.sh  https_proxy.sh  https_request.sh  install.sh  parallel.sh  robot.sh  shot.sh  socat.sh
tests/src/: TestUtils.hpp
tests/src/db/: DatabaseManagerTest.cpp
tests/src/dispatcher/: DispatcherTest.cpp
